--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horse",
+  "name": "semantic-practice-project",
   "version": "0.0.0-development",
   "private": true,
   "dependencies": {
