--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "url": "https://github.com/imagineLife/semantic-practice.git"
   },
   "devDependencies": {
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^19.0.2"
   }
 }
