--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "commit": "git cz",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +45,8 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^19.0.2"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog/"
   }
 }
